# TCPServer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  server.py
adapters/: exceptions.py  middleware.py  presenter.py  tcp.py
config/: __init__.py
domain/: entities.py  ports.py  use_cases.py
infra/: clock.py  retry.py
infra/repo/: sqlite_repo.py
infra/tcp_adapters/: receiver.py  transmitter.py
tests/: test_entities.py  test_server.py  test_sqlite_repo.py  test_tcp_receiver.py  test_tcp_transmitter.py  test_use_cases.py
